@@ -6,6 +6,7 @@ Date: ????
     - Create the -active variant whilst you're hovering it
     - Fail to make two combinators not fight over render layers
     - Luarender the active sprite
+    - Disable the combinator screen
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2024. 11. 04
